<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Fixed values - never translate -->
    <string name="app_name">Filenotes</string>

    <string name="action_new">New</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="action_rename">Rename</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <string name="search_hint">Search for...</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_file_location">File location</string>
    <string name="pref_header_appearance">Appearance</string>
    <string name="pref_font_default">Monospace</string>

    <string name="about_overview_header">Overview</string>
    <string name="about_overview_body">This is a simple note taking app which stores notes as files
        on the filesystem. You can either use your own file sync (e.g. using DropSync or similar)
        or Filenotes can take care of Dropbox sync for you.</string>
    <string name="about_license_header">License</string>
    <string name="about_license_body">This software is free to use for business or personal use.
        It is open source and released under the GPL2 license. Written and maintained by Sam
        Strachan, this is published by Code Seven Six.</string>

    <string name="error_storage_does_not_exist">Storage directory does not exist</string>
    <string name="storage_is_empty">No matching files in storage directory</string>
    <string name="new_note_file_stem">New Note%s.txt</string>
    <string name="rename_failed">Rename failed: name already exists?</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="logged_out">Logged out</string>

    <!-- Used? -->
    <string name="version">Filenotes 1.0</string>
    <string name="version_summary">Sam Strachan</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="replication_notes_updated">Notes updated</string>
    <string name="replication_conflict_extension">.conflict</string>
    <string name="replication_abort">User abort</string>
    <string name="exception_directory_already_exists">Directory already exists</string>
    <string name="default_new_folder_name">New Folder</string>

    <string name="replication_replicating">Syncing</string>
    <string name="replication_analysing">Analysing&#8230;</string>
    <string name="replication_delete_local">Delete (local)</string>
    <string name="replication_delete_remote">Delete (remote)</string>
    <string name="replication_download">Download</string>
    <string name="replication_upload">Upload</string>
    <string name="replication_resolve_conflict">Comparing</string>
    <string name="replication_none">No action</string>
    <string name="replication_error">Sync error. Aborted. Check remote directory.</string>
    <string name="replication_unknown">Unknown</string>

    <string-array name="pref_font_list_text">
        <item>Monospace</item>
        <item>Serif</item>
        <item>Sans Serif</item>
    </string-array>
    <string-array name="pref_font_list_values">
        <item>monospace</item>
        <item>serif</item>
        <item>sansserif</item>
    </string-array>

    <string-array name="pref_font_size_text">
        <item>8pt</item>
        <item>12pt</item>
        <item>16pt</item>
        <item>20pt</item>
        <item>24pt</item>
        <item>28pt</item>
    </string-array>
    <string-array name="pref_font_size_values">
        <item>8</item>
        <item>12</item>
        <item>16</item>
        <item>20</item>
        <item>24</item>
        <item>28</item>
    </string-array>

    <string-array name="pref_theme_text">
        <item>Light</item>
        <item>Dark</item>
        <item>Amoled</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>light</item>
        <item>dark</item>
        <item>amoled</item>
    </string-array>

    <string-array name="pref_note_sort_text">
        <item>By name</item>
        <item>By date modified (descending)</item>
    </string-array>
    <string-array name="pref_note_sort_values">
        <item>name_asc</item>
        <item>modified_desc</item>
    </string-array>

    <string-array name="pref_cloud_text">
        <item>None</item>
        <item>Dropbox</item>
    </string-array>
    <string-array name="pref_cloud_values">
        <item>none</item>
        <item>dropbox</item>
    </string-array>

    <string-array name="pref_replication_interval_text">
        <item>5 minutes</item>
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>4 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="pref_replication_interval_values">
        <item>5</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>240</item>
        <item>1440</item>
    </string-array>

</resources>
