<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Text.Header"
        android:text="@string/about_overview_header"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Text.Medium"
        android:text="@string/about_overview_body"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Text.Header"
        android:text="@string/about_license_header"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Text.Medium"
        android:text="@string/about_license_body"/>

</LinearLayout>